--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
 >
-<Spinner
-    android:id="@+id/localePicker"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
-<TextView
-    android:id="@+id/test"
-    android:text="@string/test"
-    android:layout_marginTop="100dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
-</LinearLayout>
+    <!-- Options de langue/voix en haut à gauche -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Spinner
+            android:id="@+id/localePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <!-- Image de Qt au centre -->
+    <ImageView
+        android:id="@+id/qt_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:contentDescription="@string/qtrobot"
+        android:src="@drawable/qt_placeholder" />
+    <!-- Texte  -->
+
+    <LinearLayout
+        android:id="@+id/layout_text"
+        android:layout_width="480dp"
+        android:layout_height="120dp"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/qt_image"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="15dp">
+
+        <ImageButton
+            android:id="@+id/previous_btn"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:src="@drawable/chevron_left"
+            android:contentDescription="@string/bouton_pr_c_dent"
+            android:scaleType="centerInside"
+            android:padding="15dp"/>
+
+        <TextView
+            android:id="@+id/test"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/test"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:gravity="center"/>
+
+        <ImageButton
+            android:id="@+id/next_btn"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:src="@drawable/chevron_right"
+            android:contentDescription="@string/bouton_suivant"
+            android:scaleType="centerInside"
+            android:padding="15dp"/>
+    </LinearLayout>
+<!-- Boutons Réactions -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/layout_text"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="16dp">
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:src="@drawable/coeur"
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/bouton_1"
+            android:background="?android:attr/selectableItemBackground" />
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:src="@drawable/coeur"
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/bouton_2"
+            android:background="?android:attr/selectableItemBackground" />
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:src="@drawable/coeur"
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/bouton_3"
+            android:background="?android:attr/selectableItemBackground" />
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:src="@drawable/coeur"
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/bouton_4"
+            android:background="?android:attr/selectableItemBackground" />
+    </LinearLayout>
+
+</RelativeLayout>
