--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,11 @@
         android:contentDescription="@string/qtrobot"
         android:src="@drawable/qt_placeholder" />
     <!-- Texte  -->
+    <ImageView
+        android:id="@+id/butterfly"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/butterfly1"/>
 
     <LinearLayout
         android:id="@+id/layout_text"
