--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:src="@drawable/coeur"
+            android:src="@drawable/triste"
             android:scaleType="fitCenter"
             android:contentDescription="@string/bouton_1"
             android:background="?android:attr/selectableItemBackground" />
@@ -113,7 +113,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:src="@drawable/coeur"
+            android:src="@drawable/smiley"
             android:scaleType="fitCenter"
             android:contentDescription="@string/bouton_3"
             android:background="?android:attr/selectableItemBackground" />
@@ -122,7 +122,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:src="@drawable/coeur"
+            android:src="@drawable/heureux"
             android:scaleType="fitCenter"
             android:contentDescription="@string/bouton_4"
             android:background="?android:attr/selectableItemBackground" />
