--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -26,11 +27,7 @@
         android:contentDescription="@string/qtrobot"
         android:src="@drawable/qt_placeholder" />
     <!-- Texte  -->
-    <ImageView
-        android:id="@+id/butterfly"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/butterfly1"/>
+
 
     <LinearLayout
         android:id="@+id/layout_text"
