resize des images et des spinners

--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -11,5 +11,6 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/fr"
-        app:shapeAppearanceOverlay="@style/RoundedCorners" />
+        android:scaleType="fitCenter"
+        />
 </LinearLayout>
