--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,20 +14,23 @@
 
         <Spinner
             android:id="@+id/localePicker"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:scaleType="fitCenter" />
 
         <Spinner
             android:id="@+id/voicePicker"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
             android:layout_weight="1"/>
 
         <Spinner
             android:id="@+id/storyPicker"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:scaleType="fitCenter"
             android:layout_weight="1"/>
     </LinearLayout>
 
