--- a/app/src/main/res/layout/story_selector.xml
+++ b/app/src/main/res/layout/story_selector.xml
@@ -9,6 +9,6 @@
     <TextView
         android:id="@+id/text_selection"
         android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         app:shapeAppearanceOverlay="@style/RoundedCorners" />
 </LinearLayout>
