--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,12 +57,12 @@
             android:contentDescription="@string/qt_emotion"
             android:scaleX="0.31"
             android:scaleY="0.31"
-
+            android:id="@+id/imageView2"
             android:layout_marginBottom="78dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-        android:src="@drawable/qt_enrhume" />
+            android:src="@drawable/qt_blase" />
 
     </FrameLayout>
 
