--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/paysage"
     android:orientation="vertical"
 >
     <!-- Options de langue/voix en haut à gauche -->
@@ -50,7 +51,7 @@
             android:layout_width="250dp"
             android:contentDescription="@string/qtrobot"
             android:layout_height="250dp"
-            android:src="@drawable/qt_placeholder" />
+            android:src="@drawable/qt_sprite" />
 
         <!-- Deuxième ImageView (superposée sur la première) -->
         <ImageView
@@ -66,6 +67,16 @@
 
     </FrameLayout>
 
+<ImageView
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:layout_marginStart="130dp"
+    android:layout_below="@+id/qt_image"
+    android:src="@drawable/rocher_removebg_preview"
+    android:scaleX="2"
+    android:scaleY="2"
+
+    />
 
 
 
@@ -87,7 +98,8 @@
             android:id="@+id/previous_btn"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="@drawable/rounded_button"
+
             android:src="@drawable/chevron_left"
             android:contentDescription="@string/bouton_pr_c_dent"
             android:scaleType="centerInside"
@@ -95,8 +107,9 @@
 
         <TextView
             android:id="@+id/phrase"
+            android:background="@drawable/rounded_button"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_weight="1"
             android:text="@string/test"
             android:textColor="@color/black"
@@ -106,8 +119,9 @@
         <ImageButton
             android:id="@+id/next_btn"
             android:layout_width="70dp"
+            android:background="@drawable/rounded_button"
+
             android:layout_height="70dp"
-            android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/chevron_right"
             android:contentDescription="@string/bouton_suivant"
             android:scaleType="centerInside"
