--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
     <!-- Options de langue/voix en haut à gauche -->
     <LinearLayout
+        android:id="@+id/menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -34,6 +35,7 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
+
     <!-- Image de Qt au centre -->
 
     <FrameLayout
@@ -53,7 +55,7 @@
             android:src="@drawable/qt_sprite_chat" />
 
         <!-- Deuxième ImageView (superposée sur la première) -->
-        <com.google.android.material.imageview.ShapeableImageView
+        <!--com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -64,7 +66,20 @@
             android:layout_marginEnd="2dp"
             android:src="@drawable/qt_blase"
             android:contentDescription="@string/qt_emotion"
-            app:shapeAppearanceOverlay="@style/RoundedCorners"/>
+            app:shapeAppearanceOverlay="@style/RoundedCorners"/-->
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imageView2"
+            android:layout_width="213dp"
+            android:layout_height="130dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="69dp"
+            android:contentDescription="@string/qt_emotion"
+            android:scaleX="0.32"
+            android:scaleY="0.31"
+            android:src="@drawable/qt_content"
+            app:shapeAppearanceOverlay="@style/RoundedCorners" />
 
 
     </FrameLayout>
